<resources>
    <!--<string name="app_name">facoryTool</string>-->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="title_activity_inform">InformActivity</string>
    <string name="title_activity_write">WriteActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="close">close</string>
    <string name="open">open</string>
    <string name="title_activity_bl_api">blApiActivity</string>

    <item name="sidebar" type="id"></item>
    <item name="curPosition" type="id"></item>
    <string name="title_activity_time">TimeActivity</string>
    <string name="title_activity_eletricty">EletrictyActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_schedule">schedule</string>
    <string name="title_activity_weather_">Weather_Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="picker_sure">sure</string>
    <string name="picker_cancel">cancel</string>
    <string name="picker_title">selection period</string>

    <string name="picker_year">year</string>
    <string name="picker_month">mouth</string>
    <string name="picker_day">day</string>
    <string name="picker_hour">hour</string>
    <string name="picker_minute">minute</string>


    <string name="all">ALL</string>
    <string name="year_month_day">YEAR-MONTH-DAY</string>
    <string name="year_month">YEAR-MONTH</string>
    <string name="month_day_hour_minute">YEAR-MONTH-DAY-HOUR-MINUTE</string>
    <string name="hour_minute">HOUR-MINUTE</string>
    <string name="title_activity_zg_main">ZgMainActivity</string>
    <string name="title_activity_zg_write_fragment">ZgWrite_fragment</string>
    <string name="title_activity_pro_scan">ProScanActivity</string>
    <string name="title_activity_zgscan">ZGScanActivity</string>
    <string name="title_activity_test_case_list">TestCaseListActivity</string>
    <string name="title_activity_show">showActivity</string>


</resources>
